Fix spacing & formatting

--- a/css/_style.css
+++ b/css/_style.css
@@ -351,7 +351,7 @@ hr {
 }
 
 .post-info {
-  margin-bottom: 2em;
+  margin-bottom: 4em;
   box-shadow: none;
 }
 
